<resources>
    <string name="app_name">Valuuttamuunnin</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="convert">Convert</string>
    <string name="settings">Settings</string>
    <string name="source_currency">Source currency</string>
    <string name="destination_currency">Destination currency</string>
    <string name="name">Name</string>
    <string name="conversion_rate">Conversion rate</string>
</resources>